[vishal] reffactor swagger routes and some services logic
