# src/routes/notes.route.js
@@ -3,6 +3,7 @@ import * as userController from '../controllers/user.controller';
 import {userAuth} from '../middlewares/auth.middleware';
 import {reddis_archived_data} from '../middlewares/reddis.middleware';
 import {reddis_notes_data} from '../middlewares/reddis.middleware';
+import {reddis_trash_data} from '../middlewares/reddis.middleware';
 
 
 const router = express.Router();
@@ -20,7 +21,7 @@ router.patch("/",userAuth, userController.updateNote);
 router.get("/", userAuth,reddis_notes_data, userController.getNote);
 
 // fetching all deleted mail
-router.get("/trash", userAuth, userController.findtrashed);
+router.get("/trash", userAuth,reddis_trash_data, userController.findtrashed);
 
 // fetching all archived notes
 router.get("/archive",userAuth,reddis_archived_data, userController.isArchived);
